# src/http/auth/router.go
@@ -1,6 +1,8 @@
 package auth
 
 import (
+	"github.com/africarealty/server/src/domain"
+	"github.com/africarealty/server/src/kit/auth"
 	"github.com/africarealty/server/src/kit/http"
 	_ "github.com/africarealty/server/src/swagger"
 )
@@ -19,12 +21,13 @@ func NewRouter(c Controller, routeBuilder *http.RouteBuilder) http.RouteSetter {
 
 func (r *Router) Set() error {
 	return r.routeBuilder.Build(
-		// authentication & authorization
-		http.R("/api/auth/login", r.ctrl.Login).POST().NoAuth(),
+		// authorization
+		http.R("/api/auth/users/login", r.ctrl.Login).POST().NoAuth(),
 		http.R("/api/auth/token/refresh", r.ctrl.TokenRefresh).POST().NoAuth(),
-		http.R("/api/auth/logout", r.ctrl.Logout).POST(),
-		http.R("/api/auth/registration", r.ctrl.Registration).POST().NoAuth(),
-		http.R("/api/auth/activation", r.ctrl.Activation).POST().NoAuth(),
-		http.R("/api/auth/password", r.ctrl.SetPassword).POST(),
+		http.R("/api/auth/users/logout", r.ctrl.Logout).POST(),
+		http.R("/api/auth/users/registration", r.ctrl.Registration).POST().NoAuth(),
+		http.R("/api/auth/users/activation", r.ctrl.Activation).POST().NoAuth(),
+		http.R("/api/auth/users/password", r.ctrl.SetPassword).POST(),
+		http.R("/api/auth/users", r.ctrl.CreateUser).POST().Authorize(auth.Resource(domain.AuthResUserProfileAll, "rw").B()),
 	)
 }
