# src/swagger/swagger.json
@@ -11,7 +11,80 @@
     },
     "basePath": "/api",
     "paths": {
-        "/auth/activation": {
+        "/auth/token/refresh": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "refreshes auth token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/auth.SessionToken"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/users": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "creates a new active user",
+                "parameters": [
+                    {
+                        "description": "create request",
+                        "name": "regRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.RegistrationRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/auth.User"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/users/activation": {
             "post": {
                 "produces": [
                     "application/json"
@@ -52,7 +125,7 @@
                 }
             }
         },
-        "/auth/login": {
+        "/auth/users/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -91,7 +164,7 @@
                 }
             }
         },
-        "/auth/logout": {
+        "/auth/users/logout": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -122,7 +195,7 @@
                 }
             }
         },
-        "/auth/password": {
+        "/auth/users/password": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -164,7 +237,7 @@
                 }
             }
         },
-        "/auth/registration": {
+        "/auth/users/registration": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -192,40 +265,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/auth.User"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/http.Error"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/token/refresh": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "auth"
-                ],
-                "summary": "refreshes auth token",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/auth.SessionToken"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/http.Error"
                         }
                     },
                     "500": {
@@ -299,6 +338,10 @@
         "auth.RegistrationRequest": {
             "type": "object",
             "properties": {
+                "confirmation": {
+                    "description": "Confirmation - password cnfirmation",
+                    "type": "string"
+                },
                 "email": {
                     "description": "Email - user email",
                     "type": "string"
@@ -362,6 +405,10 @@
         "auth.User": {
             "type": "object",
             "properties": {
+                "activatedAt": {
+                    "description": "ActivatedAt - user's activation date",
+                    "type": "string"
+                },
                 "agent": {
                     "description": "Agent - agent profile",
                     "$ref": "#/definitions/auth.AgentProfile"
@@ -380,6 +427,10 @@
                 },
                 "lastName": {
                     "description": "LastName - user's last name",
+                    "type": "string"
+                },
+                "lockedAt": {
+                    "description": "LockedAt - user's locking date",
                     "type": "string"
                 },
                 "owner": {
